Fixes #4 - Fixed dragging issues on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  touch-action: none;
   /* shape-rendering: crispEdges; */
 }
 
@@ -316,6 +317,7 @@ button {
   padding: .1rem;
   /* border: 1px solid transparent; */
   user-select: none;
+  touch-action: none;
 }
 
 .color-item.highlighted {
