--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,5 @@ body {
   margin-top: 2rem;
   overscroll-behavior-y: contain;
   overscroll-behavior-x: none;
+  touch-action: none;
 }
